tests/tests/errors/2006-38.vb
'#compiler-options:/linkresource:
'#compiler-message:Command line error BC2006 : option 'linkresource' requires ':<resinfo>'
'#exit-code:1